--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <section class="gradiant-img-background">
-  <form>
+  <form action="/search" method="GET">
     <div class="firstDiv-home">
       <h2>Find somthing to eat</h2>
       <input
