adding result recipe page with grid view

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -14,7 +14,12 @@
     <link rel="stylesheet" href="/styles/reset.css" />
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles/layout.css" />
-    <link rel="stylesheet" href="/styles/modules.css" />
+    <link rel="stylesheet" href="/styles/modules/home.css" />
+    <link rel="stylesheet" href="/styles/modules/header.css" />
+    <link rel="stylesheet" href="/styles/modules/footer.css" />
+    <link rel="stylesheet" href="/styles/modules/recipeResult.css" />
+
+
     <title>Fit Food</title>
   </head>
   
