basic calorie calculator

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/styles/modules/header.css" />
     <link rel="stylesheet" href="/styles/modules/footer.css" />
     <link rel="stylesheet" href="/styles/modules/recipeResult.css" />
+    <link rel="stylesheet" href="/styles/modules/calorieCalculator.css" />
 
 
     <title>Fit Food</title>
