--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,7 @@
             <a href="catagory-page.html" id="non-profit">non-profit</a>
           </div>
         </li> -->
-        <li><a href="#">Calorie calculator</a></li>
+        <li><a href="/calculate">Calorie calculator</a></li>
         <li><a href="#">My Fit Food</a></li>
         <li><a href="#">restaurants</a></li>
         <li><a href="#">about us</a></li>
