return specific recipe by uri

--- a/views/pages/recipeResult.ejs
+++ b/views/pages/recipeResult.ejs
@@ -16,7 +16,7 @@
       <div class="card__img">
           <img class="card__img" src="<%=recipe.image%>" alt="img">
       </div>
-      <a href="#" class="card_link">
+      <a href="/recipeDetails/?uri=<%=recipe.uri%>" class="card_link">
         <div class="card__img--hover">
             <img class="card__img--hover" src="<%=recipe.image%>" alt="img">
         </div>
