--- a/views/pages/recipeResult.ejs
+++ b/views/pages/recipeResult.ejs
@@ -5,7 +5,7 @@
     <%recipes.forEach((recipe) => {%>
     <article class="card card--1">
       <div class="card__info-hover">
-        <a class="fav" href="#">
+        <a class="fav" href="/addFav/"> 
           <i class="far fa-heart card__like favIcon"></i>
         </a>
         <!-- <div class="card__clock-info">
