--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,7 +17,7 @@
           </div>
         </li> -->
         <li><a href="#">Calorie calculator</a></li>
-        <li><a href="#">My Fit Food</a></li>
+        <li><a href="/fav">My Fit Food</a></li>
         <li><a href="#">restaurants</a></li>
         <li><a href="#">about us</a></li>
       </ul>
