--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/styles/modules/footer.css" />
     <link rel="stylesheet" href="/styles/modules/recipeResult.css" />
     <link rel="stylesheet" href="/styles/modules/calorieCalculator.css" />
+    <link rel="stylesheet" href="/styles/modules/fav.css"/>
 
 
     <title>Fit Food</title>
