--- a/public/styles/modules/fav.css
+++ b/public/styles/modules/fav.css
@@ -1,12 +1,30 @@
+
+.tableTitle{
+    text-align: center;
+    margin-top: 5%;
+    background-color:#dddddd;
+    margin-bottom: 0%;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+    font-size: large;
+    color: white;
+
+}
 .myFitFoodTable {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 85%;
+    margin-bottom: 5%;
+    /* margin-top: 5%; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .tableData , .tableHeader{
     border: 1px solid #dddddd;
-    text-align: left;
+    text-align: center;
     padding: 8px;
 }
 
