--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,4 +39,24 @@
       </div>
     </div>
   </form>
+  <hr>
+  <form action="/search" method="GET">
+    <div class="firstDiv-home">
+      <h2>Or add ingredients to cook!</h2>
+      <input
+        class="input-style"
+        type="text"
+        name="searchFood"
+        id="searchFood"
+        placeholder="e.g., tomato salad, potato, chocolate"
+        required
+      />
+      <button class="button-style hvr-back-pulse-green" type="submit">
+        Search
+      </button>
+      <button id="refine" class="button-style-2 hvr-back-pulse" type="button">
+        Refine search by
+      </button>
+    </div>
+  </form>
 </section>
