--- a/public/styles/modules/fav.css
+++ b/public/styles/modules/fav.css
@@ -7,27 +7,47 @@
     width: 85%;
     margin-left: auto;
     margin-right: auto;
-    padding: 15px;
+    padding: 20px;
     font-size: large;
-    color: white;
+    color: #f6f8ff;
+    font-weight: 600;
+    background-color: #646363;
 
 }
 .myFitFoodTable {
-    font-family: arial, sans-serif;
+    /* font-family: arial, sans-serif; */
     border-collapse: collapse;
     width: 85%;
     margin-bottom: 5%;
-    /* margin-top: 5%; */
     margin-left: auto;
     margin-right: auto;
+   
 }
 
 .tableData , .tableHeader{
     border: 1px solid #dddddd;
     text-align: center;
-    padding: 8px;
+    padding: 15px;
+    font-family: "Raleway", sans-serif;
 }
 
 tr:nth-child(even) {
     background-color: #dddddd;
 }
+.deleteButton{
+    background-color: transparent;
+    border: none;
+}
+.deleteButton:hover{
+    color: #f46b45;
+}
+.linkTag{
+    color: #646363;
+    text-decoration: none;
+}
+.linkTag:visited ,.linkTag:hover{
+  color: #f46b45;
+  text-decoration: none;
+}
+
+
