--- a/views/index.ejs
+++ b/views/index.ejs
@@ -61,7 +61,7 @@
       </div>
 
       <button class="button-style hvr-back-pulse-green" type="submit">
-        Search
+        Analyse Nutrition
       </button>
       <button id="addIngredient" class="button-style-2 hvr-back-pulse" type="button">
         Add one more ingredient
