finished data pulling

--- a/views/pages/recipeResult.ejs
+++ b/views/pages/recipeResult.ejs
@@ -40,13 +40,13 @@
           <span class="card__by"
             ><i class="fas fa-fire"></i
             ><a  class="card__author" title="author"
-              ><%=recipe.calPerServ%> calories</a
+              ><%=recipe.calPerServ%> Calories</a
             ></span
           >
           <span class="card__by"
             ><i class="far fa-clipboard"></i
             ><a class="card__author" title="author"
-              ><%=recipe.ingredients.length%> ingradiants</a
+              ><%=recipe.ingredients.length%> Ingredients</a
             ></span
           >
         </div>
