--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,11 +45,11 @@
       placeholder="Ingredient" required/>
     <input class="input-list-style" type="number" name="{{amount}}"
       placeholder="Amount" required/>
-    <select class="input-list-style" id="{{measure}}"></select>
+    <select name="{{measure}}" class="input-list-style" id="{{measure}}"></select>
   </script>
 
   <hr>
-  <form action="#" method="GET">
+  <form action="/dataIng" method="POST">
     <div class="firstDiv-home">
       <h2>Or add ingredients to cook!</h2>
       <div class="template-add-area">      
@@ -57,7 +57,7 @@
           placeholder="Ingredient" required/>
         <input class="input-list-style" type="number" name="ingredientAmount0"
           placeholder="Amount" required/>
-        <select class="input-list-style" id="ingredientMeasure0"></select>
+        <select name="ingredientMeasure0" class="input-list-style" id="ingredientMeasure0"></select>
       </div>
 
       <button class="button-style hvr-back-pulse-green" type="submit">
