--- a/public/styles/modules/fav.css
+++ b/public/styles/modules/fav.css
@@ -51,3 +51,79 @@ tr:nth-child(even) {
 }
 
 
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+    .tableTitle{
+        text-align: center;
+        margin-top: 5%;
+        background-color:#dddddd;
+        margin-bottom: 0%;
+        width: 85%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 20px;
+        font-size: large;
+        color: #f6f8ff;
+        font-weight: 600;
+        background-color: #646363;
+    
+    }
+    .myFitFoodTable{
+        width: fit-content;
+        
+    }
+    
+
+	/* Force table to not be like tables anymore */
+	.myFitFoodTable , .tableData , .tableHeader, .tableheadrerRow { 
+		display: block; 
+	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	.tableheadrerRow { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	.tableheadrerRow { border: 1px solid #ccc; }
+	
+	.tableData { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+	}
+	
+	.tableData:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 16px;
+		left: 6px;
+		width: 45%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+    }
+    td:nth-child(even) {
+        background-color: #dddddd;
+    }
+    td:nth-child(odd) {
+        background-color:  #eee;
+    }
+	
+	/*
+	Label the data
+	*/
+	td:nth-of-type(1):before { content: "Recipe Name"; }
+	td:nth-of-type(2):before { content: "Calories"; }
+	td:nth-of-type(3):before { content: "Ingredients"; }
+	td:nth-of-type(4):before { content: "Date"; }
+	td:nth-of-type(5):before { content: "Remove From My List"; }
+	td:nth-of-type(6):before { content: "Go To My Recipe"; }
+}
+
+
