--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,9 +49,10 @@
   </script>
 
   <hr>
-  <form action="/dataIng" method="POST">
+  <form action="/ingredientDetails" method="POST">
     <div class="firstDiv-home">
       <h2>Or add ingredients to cook!</h2>
+      <input id="maxCalories" class="input-list-style" type="hidden" name="maxCalories"/>
       <div class="template-add-area">      
         <input class="input-list-style" type="text" name="searchIngredient0"
           placeholder="Ingredient" required/>
