--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/styles/modules/calorieCalculator.css" />
     <link rel="stylesheet" href="/styles/modules/recipeDetail.css">
     <link rel="stylesheet" href="/styles/modules/fav.css"/>
+    <link rel="stylesheet" href="/styles/modules/nutritionDetail"/>
 
 
     <title>Fit Food</title>
