addigf new fiters

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,15 @@
     </div>
     <div id="filter" class="secondDiv-home">
       <div>
+        <p>Exclude ingredients</p>
+        <input class="ingr-input" id="excluded" type="text" name="excluded" />
+      </div>
+      <div>
+        <p>Max ingredients</p>
+        <label for="to">Max</label>
+        <input id="ingr" type="number" name="ingr" placeholder="00.00" />
+      </div>
+      <div>
         <p>Calorie</p>
         <label for="from">From</label>
         <input id="from" type="number" name="from" placeholder="00.00" />
