--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <a href="/">
-      <img src="img/logo.png" alt="logo" />
+      <img src="/img/logo.png" alt="logo" />
     </a>
     <nav>
       <ul>
