--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="../../public/img/icon.svg"
+      href="/img/icon.svg"
       type="image/x-icon"
     />
     <link
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/styles/modules/calorieCalculator.css" />
     <link rel="stylesheet" href="/styles/modules/recipeDetail.css">
     <link rel="stylesheet" href="/styles/modules/fav.css"/>
+    <link rel="stylesheet" href="/styles/modules/error.css"/>
 
 
     <title>Fit Food</title>
