--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
      
 
         <li><a href="#">restaurants</a></li>
-        <li><a href="#">about us</a></li>
+        <li><a href="/aboutus">about us</a></li>
       </ul>
     </nav>
     <!-- <div>
