--- a/public/styles/modules/recipeResult.css
+++ b/public/styles/modules/recipeResult.css
@@ -159,3 +159,10 @@
   display: flex;
   justify-content: space-around;
 }
+.fav{
+  background-color: transparent;
+    border: none;
+}
+.favIcon:active{
+color: #f46b45;
+}
