--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,8 +1,6 @@
 <section class="gradiant-img">
-    
       <div class="errorDiv">
-        <h1> 404 </h1>
-        <h2>Page Not Found</h2>
+        <h1> <%= code%> </h1>
+        <h2><%= message%>/h2>
       </div>
-
   </section>
