new responsive header

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,6 +8,6 @@
       <i class="fab fa-instagram"></i>
       <i class="fab fa-youtube"></i>
     </div>
-    <div id="edamam-badge" data-color="white"></div>
+    <!-- <div id="edamam-badge" data-color="white"></div> -->
   </footer>
   <script src="/js/app.js"></script>
