--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,8 @@
 <html lang="en">
     <%- include('partials/head') %>
 <body>
-    <%- include('partials/header') %>
+    <%- include('partials/newHeader') %>
+
     <%- body %>
     <%- include('partials/footer') %>
 </body>
