--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,6 +1,5 @@
 <section class="gradiant-img">
       <div class="errorDiv">
-        <h1> <%= code%> </h1>
-        <h2><%= message%>/h2>
+        <h2><%= message%></h2>
       </div>
   </section>
