--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <a href="/">
-      <img src="img/logo.png" alt="logo" />
+      <img src="/img/logo.png" alt="logo" />
     </a>
     <nav>
       <ul>
@@ -23,6 +23,7 @@
         <li><a href="/calculate">Calorie calculator</a></li>
      
 
+        <li><a href="/ingredientDetails">Your Own Recipe</a></li>
         <li><a href="#">restaurants</a></li>
         <li><a href="#">about us</a></li>
       </ul>
