--- a/public/styles/modules/recipeDetail.css
+++ b/public/styles/modules/recipeDetail.css
@@ -1,65 +1,120 @@
-
-
-h1{
-    font-size: 25px;
-    padding-left: 30px;
-    padding-top: 30px;
+.recipe-title h2 {
+  font-size: 20pt;
+  font-family: "Roboto Slab", serif;
+  color: #646363;
 }
 
-.section-title{
-    font-size: 25px;
-    padding-bottom: 10px;
-    padding: 10px;
+.section-title {
+  font-size: 15pt;
+  font-family: "Roboto Slab", serif;
+  padding: 20px 20px;
+  color: #fff;
+  background-color: #eea849;
+  border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
 }
-
-.ingredient-row{
-    font-size: 15px;
-    padding: 5px;
-}
-
 
 .recipe-img img {
-    padding-left: 30px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    width: 60%;
-    height: 20%;
-
+  padding-bottom: 30px;
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .recipe-title {
-    grid-area: recipe-title;
+  grid-area: recipe-title;
 }
 
 .recipe-img {
-    grid-area: recipe-img;
-    /* max-height: 100%; */
+  grid-area: recipe-img;
+  border-radius: 0;
 }
 
 .ingredients {
-    grid-area: ingredients;
-    width: 50%;
+  grid-area: ingredients;
+  overflow: hidden;
+
 }
 
-.nutrition {
-    grid-area: nutrition;
-    width: 100%;
+.ingredients ul {
+  margin-top: 5px;
+  color: #646363;
+  padding: 20px;
+  background-color: #fff;
+  height: 100%;
+}
 
+.ingredients ul li {
+  line-height: 20pt;
+}
+.circle-ingr {
+  background-color: #646363;
+  height: 7px;
+  width: 7px;
+  display: inline-block;
+  border-radius: 50%;
+  margin-right: 7px;
+}
+.nutrition {
+  grid-area: nutrition;
+}
+
+.nutrition-details {
+  margin-top: 5px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  align-items: center;
+  background-color: #fff;
+}
+
+.nutrition-details div {
+  background-color: #eee;
+  border-radius: 20px;
+  padding: 20px 0;
+  width: 27%;
+  color: #646363;
+}
+.nutrition-details h3 {
+  font-size: 20pt;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 10px;
+  color: #f46b45;
+}
+
+.nutrition-details h5 {
+  font-size: 9pt;
 }
 
 .instructions {
-    grid-area: instructions;
-    width: 100%;
-    max-height: 100%;
+  grid-area: instructions;
+}
+.instructions div {
+  background-color: #fff;
+  padding: 20px;
+  margin-top: 5px;
+  text-align: center;
+
+}
+.instructions button {
+  margin-top: 0;
+  background-color: #f46b45;
+  color: #fff;
 }
 
-
 .container {
-    display: grid;
-    grid-template-areas:
-    'recipe-title recipe-title '
-    'recipe-img recipe-img '
-    'ingredients nutrition '
-    'ingredients instructions ';
-
-  }
+  width: 85%;
+  height: 100%;
+  margin: 50px auto;
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas:
+    "recipe-title recipe-title "
+    "recipe-img recipe-img "
+    "ingredients nutrition "
+    "ingredients instructions ";
+  grid-template-columns: 1fr 1fr;
+  
+}
