--- a/views/pages/calorieCalculator.ejs
+++ b/views/pages/calorieCalculator.ejs
@@ -1,9 +1,9 @@
-<main class="card-container">
+<main class="gradiant-img-background-2">
   <div id="tabs">
-    <ul>
+    <!-- <ul>
       <li><a href="#tabs-1">Base Calorie Calculation</a></li>
       <li><a href="#tabs-2">My Calorie Profile</a></li>
-    </ul>
+    </ul> -->
     <div id="tabs-1">
       <section id="calorie-card">
         <form id="form-calories">
@@ -37,7 +37,7 @@
         </select>  -->
       </section>
     </div>
-
+<!-- 
     <div id="tabs-2">
       <section id="profile-card">
         <h1 class="de0">This is your body</h1>
@@ -60,7 +60,7 @@
           <img src="img/logo.png"><h1></h1>Max calories is: <span class="optimal-calories">0.0</span></h1>
         </div>
       </section>
-    </div>
+    </div> -->
   </div>
   
 </main>
