--- a/views/partials/newHeader.ejs
+++ b/views/partials/newHeader.ejs
@@ -13,7 +13,7 @@
     <li><a href="/">home</a></li>
     <li><a href="/fav">My Fit Food</a></li>
     <li><a href="/calculate">Calorie calculator</a></li>
-    <li><a href="/">nutrition wizard</a></li>
+    <li><a href="/nutritionWizard">nutrition wizard</a></li>
     <li><a href="/aboutus">about us</a></li>
   </ul>
 </nav>
