--- a/public/styles/modules/fav.css
+++ b/public/styles/modules/fav.css
@@ -127,3 +127,10 @@ only screen and (max-width: 760px),
 }
 
 
+
+
+@media screen and (max-width: 800px) {
+    .card-container {
+      padding-top: 100px;
+    }
+}
