--- a/public/styles/modules/calorieCalculator.css
+++ b/public/styles/modules/calorieCalculator.css
@@ -64,42 +64,21 @@
 /* tabbing */
 
 .card-container ul {
+  width: fit-content;
   margin: 0 auto;
   display: flex;
-    flex-flow: nowrap;
+  flex-flow: nowrap;
+  border-bottom: solid;
+}
+
+#tabs {
+  width: 80%;
 }
 
 /* profile card */
 
-#profile-card {
-  height: 480px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 40px 1fr 20px 1fr 1fr;
-  grid-template-rows: 60px 1fr 1fr 20px 1fr 1fr;
-}
-
 #profile-card > * {
   padding: 20px;
-}
-
-.de1 {
-  grid-row: 2/4;
-  grid-column: 1/6;
-}
-
-.de2 {
-  grid-row: 5/7;
-  grid-column: 1/4;
-}
-
-.de3 {
-  grid-row: 5/7;
-  grid-column: 5/9;
-}
-
-.de4 {
-  grid-row: 2/4;
-  grid-column: 7/9;
 }
 
 .de4 img{
@@ -113,10 +92,10 @@
 .human-body {
   width: 100px;
   position: relative;
-  padding-top: 240px;
-  height: 130px;
-  display: block;
-  margin: 40px auto;
+  height: 200px;
+  z-index: -1;
+  float: right;
+  margin: 50px 13% 0 0;
 }
 .human-body svg:hover {
   cursor: pointer;
@@ -172,3 +151,38 @@
 #area #data {
   color: black;
 }
+
+@media all and (min-width: 760px) {
+  #profile-card {
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 40px 1fr 20px 1fr 1fr;
+    grid-template-rows: 60px 1fr 1fr 20px 1fr 1fr;
+  }
+
+  .human-body {
+    grid-row: 1/7;
+    grid-column: 7/9;
+  }
+
+  .de1 {
+    grid-row: 2/4;
+    grid-column: 1/6;
+  }
+
+  .de2 {
+    grid-row: 5/7;
+    grid-column: 1/4;
+  }
+
+  .de3 {
+    grid-row: 5/7;
+    grid-column: 5/9;
+  }
+
+  .de4 {
+    grid-row: 2/4;
+    grid-column: 7/9;
+  }
+}
+
