--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,12 +19,11 @@
 
      
         <li><a href="/fav">My Fit Food</a></li>
-
         <li><a href="/calculate">Calorie calculator</a></li>
         <li><a href="/nutritionWizard">nutrition wizard</a></li>
         <li><a href="/ingredientDetails">Your Own Recipe</a></li>
         <li><a href="#">restaurants</a></li>
-        <li><a href="/aboutus">about us</a></li>
+        <li><a href="/newAboutus">about us</a></li>
       </ul>
     </nav>
     <!-- <div>
