--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles/layout.css" />
     <link rel="stylesheet" href="/styles/modules/home.css" />
-    <!-- <link rel="stylesheet" href="/styles/modules/header.css" /> -->
+    <link rel="stylesheet" href="/styles/modules/newAboutus.css" />
     <link rel="stylesheet" href="/styles/modules/newHeader.css" />
     <link rel="stylesheet" href="/styles/modules/footer.css" />
     <link rel="stylesheet" href="/styles/modules/recipeResult.css" />
