--- a/views/pages/calorieCalculator.ejs
+++ b/views/pages/calorieCalculator.ejs
@@ -1,10 +1,10 @@
 <main class="gradiant-img-background-2">
-  <div id="tabs">
+  <!-- <div id="tabs"> -->
     <!-- <ul>
       <li><a href="#tabs-1">Base Calorie Calculation</a></li>
       <li><a href="#tabs-2">My Calorie Profile</a></li>
     </ul> -->
-    <div id="tabs-1">
+    <!-- <div id="tabs-1"> -->
       <section id="calorie-card">
         <form id="form-calories">
           <fieldset><legend>Calorie Calculator</legend>
@@ -20,6 +20,7 @@
               <label for="male">Male</label>
               <input type="radio" id="female" name="gender" value="female">
               <label for="female">Female</label>
+              <button type="submit" id="addCalories">Add Base Calorie</button>
             </div>
           </fieldset> 
         </form>
@@ -27,14 +28,13 @@
           <h1 class="optimal-calories">0.0</h1>
           <h2>calorie per day</h2>
           <input type="hidden" name="baseCalories" id="baseCalories" value="">
-          <button type="submit" id="addCalories">Add Base Calorie</button>
         </div>
         <!-- <label for="searchTerm">Search for:</label>
         <input id="searchTerm" type="text" size="30" value="" name="searchTerm">
         <select title="Search in" id="scope">
         </select>  -->
       </section>
-    </div>
+    <!-- </div> -->
 <!-- 
     <div id="tabs-2">
       <section id="profile-card">
@@ -59,7 +59,7 @@
         </div>
       </section>
     </div> -->
-  </div>
+  <!-- </div> -->
   
 </main>
 
