--- a/public/styles/modules/calorieCalculator.css
+++ b/public/styles/modules/calorieCalculator.css
@@ -36,6 +36,18 @@
   color: #fff;
 }
 
+#addCalories {
+    background-color: #fff;
+    color: #f46b45;
+    border: none;
+    border-radius: 60px;
+    padding: 10px 20px;
+    margin-left: 10px;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-family: "Raleway", sans-serif;
+}
+
 #form-result {
   margin: 20px;
   background-color: ivory;
@@ -52,6 +64,10 @@
   text-align: center;
   font-size: 20px;
   margin-top: 20%;
+}
+
+.optimal-calories {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #calorie-card input[type="number"] {
@@ -92,10 +108,7 @@
   margin: 0 auto;
   display: flex;
   flex-flow: nowrap;
-<<<<<<< HEAD
   border-bottom: solid;
-=======
->>>>>>> test
 }
 
 #tabs {
@@ -108,31 +121,7 @@
   padding: 20px;
 }
 
-<<<<<<< HEAD
 .de4 img{
-=======
-.de1 {
-  grid-row: 2/4;
-  grid-column: 1/6;
-}
-
-.de2 {
-  grid-row: 5/7;
-  grid-column: 1/4;
-}
-
-.de3 {
-  grid-row: 5/7;
-  grid-column: 5/9;
-}
-
-.de4 {
-  grid-row: 2/4;
-  grid-column: 7/9;
-}
-
-.de4 img {
->>>>>>> test
   object-fit: cover;
   width: 100%;
   max-height: 100%;
@@ -202,7 +191,6 @@
 #area #data {
   color: black;
 }
-<<<<<<< HEAD
 
 @media all and (min-width: 760px) {
   #profile-card {
@@ -238,5 +226,3 @@
   }
 }
 
-=======
->>>>>>> test
