--- a/public/styles/modules/nutritionDetail.css
+++ b/public/styles/modules/nutritionDetail.css
@@ -1,9 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+.nutrition-background {
+  background-image: linear-gradient(
+      to left,
+      rgba(238, 168, 73, 0.8),
+      rgba(244, 107, 69, 0.8)
+    ),
+    url("https://images.pexels.com/photos/4199098/pexels-photo-4199098.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+  background-size: cover;
+  background-position: 50% 50%;
+  position: relative;
+  padding: 100px 50px;
+}
+#ingredients-container h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 25pt;
+  color: #fff;
+  font-weight: bold;
+}
 
+#ingredients-container h2 {
+  grid-area: title;
+}
 
 #ingredients-user {
-    grid-area: user;
+  grid-area: user;
 }
 
 #ingredients-input {
@@ -15,23 +36,31 @@
 }
 
 #ingredients-container {
+  width: 85%;
+  margin: 0 auto;
   display: grid;
-  grid-template-areas: 
-  'user'
-  'input'
-  'output';
+  grid-template-areas:
+    "title"
+    "user"
+    "input"
+    "output";
+  grid-gap: 20px;
   /* font-weight: bold; */
 }
 
-
-@media all and (min-width:760px) {
+@media all and (min-width: 760px) {
   #ingredients-container {
+    grid-gap: 20px;
+    margin: 0 auto;
     display: grid;
-    grid-template-areas: 
-    'user output'
-    'input output'
-    'input output'
-    'empty output';
+    grid-template-areas:
+      "title title"
+      "user output"
+      "input output"
+      "input output"
+      "empty output";
+      grid-template-columns: 1fr 1fr;
+
     /* font-weight: bold; */
   }
 }
@@ -39,10 +68,17 @@
 /* --------------- User table style --------------- */
 
 .template-add-area {
-  background-color: #7777777e;
-  padding: 10px;
-  border-radius: 10px;
+  /* background-color: rgba(238, 168, 73, 0.7); */
+  display: flex;
+  flex-direction: column;
+  /* padding: 10px; */
+  /* border-radius: 10px; */
+}
 
+.template-add-area div {
+  /* background-color: rgba(238, 168, 73, 0.7); */
+  display: flex;
+  justify-content: center;
 }
 
 .input_ingr {
@@ -50,19 +86,31 @@
   font-size: 30pt;
   font-weight: bold;
   text-align: center;
-  width: 90%;
-  margin: 20px auto;
+  width: 100%;
+  margin: 10px auto;
 }
 
 .input-list-style {
-  padding: 20px;
-  margin: 2px;
-  width: 30%;
+  width: 100%;
+  margin: 10px 2px;
+  padding: 15px 25px;
   border: none;
+  border-radius: 0;
   box-sizing: border-box;
   font-family: "Raleway", sans-serif;
-  font-size: 13pt;
-  border-radius: 10px;
+  color: #646363;
+  font-size: 10pt;
+}
+.input-list-style:first-child{
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
+} 
+.input-list-style:last-child{
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+} 
+.input-list-style:focus {
+  outline: none;
 }
 
 /* --------------- input table style --------------- */
@@ -77,16 +125,16 @@
   background-color: white;
 }
 
-#ingredients-input th { 
+#ingredients-input th {
   font-weight: 400;
   text-align: left;
 }
 
-#ingredients-input .table > tbody > tr > td, 
-#ingredients-input .table > tbody > tr > th, 
-#ingredients-input .table > tfoot > tr > td, 
-#ingredients-input .table > tfoot > tr > th, 
-#ingredients-input .table > thead > tr > td, 
+#ingredients-input .table > tbody > tr > td,
+#ingredients-input .table > tbody > tr > th,
+#ingredients-input .table > tfoot > tr > td,
+#ingredients-input .table > tfoot > tr > th,
+#ingredients-input .table > thead > tr > td,
 #ingredients-input .table > thead > tr > th {
   border-top: 1px solid #f2f6f9;
   padding: 8px;
@@ -94,7 +142,7 @@
   vertical-align: top;
 }
 
-#ingredients-input .table>thead>tr>th {
+#ingredients-input .table > thead > tr > th {
   vertical-align: bottom;
   border-bottom: 2px solid #979797;
 }
@@ -119,7 +167,6 @@ b {
   font-size: 14px;
   line-height: 1.42857143;
   background-color: white;
-
 }
 
 .performance-facts__table #lkcal-val-cal {
@@ -136,7 +183,7 @@ b {
   padding: 10px;
 }
 
-#ingredients-container h1{
+#ingredients-container h1 {
   border: 0 none;
   font-weight: 300;
   padding: 15px 0 0;
@@ -158,16 +205,16 @@ b {
 }
 
 .performance-facts__table .amps {
-    font-size: 16px;
-    font-weight: bold !important;
-    display: block;
+  font-size: 16px;
+  font-weight: bold !important;
+  display: block;
 }
 
-.performance-facts__table th, 
-.performance-facts__table--small th, 
-.performance-facts__table--grid th, 
-.performance-facts__table td, 
-.performance-facts__table--small td, 
+.performance-facts__table th,
+.performance-facts__table--small th,
+.performance-facts__table--grid th,
+.performance-facts__table td,
+.performance-facts__table--small td,
 .performance-facts__table--grid td {
   font-weight: normal;
   text-align: left;
@@ -175,13 +222,15 @@ b {
   border-top: 1px solid black;
 }
 
-.performance-facts__table td:last-child, 
-.performance-facts__table--small td:last-child, 
+.performance-facts__table td:last-child,
+.performance-facts__table--small td:last-child,
 .performance-facts__table--grid td:last-child {
   text-align: right;
 }
 
-.performance-facts__table, .performance-facts__table--small, .performance-facts__table--grid {
+.performance-facts__table,
+.performance-facts__table--small,
+.performance-facts__table--grid {
   width: 100%;
 }
 
@@ -190,7 +239,7 @@ b {
   border: 0 none !important;
 }
 
-#ingredients-container li{
+#ingredients-container li {
   border: solid;
 }
 
