--- a/public/styles/modules/recipeDetail.css
+++ b/public/styles/modules/recipeDetail.css
@@ -31,6 +31,7 @@
 .recipe-img img {
   width: 100%;
   height: 100%;
+  max-height: 400px;
   object-fit: cover;
   object-position: 50% 50%;
   border-radius: 5px;
