--- a/views/partials/newHeader.ejs
+++ b/views/partials/newHeader.ejs
@@ -13,8 +13,8 @@
     <li><a href="/">home</a></li>
     <li><a href="/fav">My Fit Food</a></li>
     <li><a href="/calculate">Calorie calculator</a></li>
-    <li><a href="/nutritionWizard">nutrition wizard</a></li>
-    <li><a href="/ingredientDetails">Your Own Recipe</a></li>
+    <!-- <li><a href="/nutritionWizard">nutrition wizard</a></li> -->
+    <li><a href="/ingredientDetails">Nutrition wizard</a></li>
     <li><a href="/newAboutus">about us</a></li>
   </ul>
 </nav>
