--- a/public/styles/modules/home.css
+++ b/public/styles/modules/home.css
@@ -164,7 +164,7 @@ label:hover:before {
   width: 100%;
   border: none;
   border-radius: 100px;
-  background-image: url(../img/search.svg);
+  background-image: url(/img/search.svg);
   background-repeat: no-repeat;
   background-position: 95% 50%;
   background-size: 25px;
@@ -325,3 +325,21 @@ hr {
   font-size: 13pt;
 }
 
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+}
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
