--- a/public/styles/modules/recipeResult.css
+++ b/public/styles/modules/recipeResult.css
@@ -1,11 +1,10 @@
 .card-container {
-  display: flex;
-  display: -webkit-flex;
   -webkit-justify-content: center;
   -webkit-align-items: center;
   justify-content: center;
   align-items: center;
   margin: 50px auto;
+  text-align-last: center;
 }
 
 .fav {
