--- a/public/styles/modules/nutritionDetail.css
+++ b/public/styles/modules/nutritionDetail.css
@@ -183,7 +183,7 @@ b {
   padding: 10px;
 }
 
-#ingredients-container h1 {
+/* #ingredients-container h1 {
   border: 0 none;
   font-weight: 300;
   padding: 15px 0 0;
@@ -191,7 +191,7 @@ b {
   margin: 0 0 0.25rem 0;
   color: #585858;
   line-height: 52px;
-}
+} */
 
 .performance-facts__header {
   border-bottom: 10px solid black;
