--- a/public/styles/modules/recipeDetail.css
+++ b/public/styles/modules/recipeDetail.css
@@ -11,12 +11,12 @@
     padding-top: 30px;
 }
 
-.section-title{
+/* .section-title{
     font-size: 25px;
     padding-bottom: 10px;
     padding: 10px;
 
-}
+} */
 
 .section-title {
   font-size: 15pt;
