--- a/public/styles/modules/home.css
+++ b/public/styles/modules/home.css
@@ -164,7 +164,7 @@ label:hover:before {
   width: 100%;
   border: none;
   border-radius: 100px;
-  background-image: url(../img/search.svg);
+  background-image: url(/img/search.svg);
   background-repeat: no-repeat;
   background-position: 95% 50%;
   background-size: 25px;
