finished basic idea

--- a/public/styles/modules/aboutus.css
+++ b/public/styles/modules/aboutus.css
@@ -37,9 +37,9 @@
   }
   
   /* Add rounded corners to the top left and the top right corner of the image */
-  img {
+  /* img {
     border-radius: 5px 5px 0 0;
-  }
+  } */
   .develperName{
      font-weight: bold;
      margin-top: 2%;
