--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         <input id="fromC" type="number" name="fromC" placeholder="00.00" />
         <label for="toC">To</label>
         <input id="toC" type="number" name="toC" placeholder="00.00" />
-        <a class="hvr-back-pulse-green" href="#">Calculate it</a>
+        <a class="hvr-back-pulse-green" id="thisCalories" href="/calculate">Calculate it</a>
       </div>
       <div>
         <p>Diet</p>
