--- a/views/pages/nutritionDetail.ejs
+++ b/views/pages/nutritionDetail.ejs
@@ -43,7 +43,6 @@
                 id="ingredientMeasure0"
               ></select>
             </div>
-
           </div>
 
           <div>
@@ -152,3 +151,5 @@
     </div>
   </div>
 </main>
+<div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
