--- a/views/pages/nutritionDetail.ejs
+++ b/views/pages/nutritionDetail.ejs
@@ -155,5 +155,5 @@
     <% } %>
   </div>
 </main>
-<div id="chartContainer" style="height: 300px; width: 100%;"></div>
-<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<!-- <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+<script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script> -->
