--- a/public/styles/modules/nutritionDetail.css
+++ b/public/styles/modules/nutritionDetail.css
@@ -146,6 +146,7 @@
   vertical-align: bottom;
   /* border-bottom: 2px solid #979797; */
   margin: 2px;
+  font-weight: bold;
 }
 
 /* --------------- output table style --------------- */
