hotfix table nut

--- a/public/styles/modules/calorieCalculator.css
+++ b/public/styles/modules/calorieCalculator.css
@@ -48,6 +48,10 @@
     font-family: "Raleway", sans-serif;
 }
 
+#addCalories:focus{
+  outline: none;
+}
+
 #form-result {
   margin: 20px;
   background-color: ivory;
