--- a/views/pages/nutritionDetail.ejs
+++ b/views/pages/nutritionDetail.ejs
@@ -94,7 +94,7 @@
               <th><%= ingredient.quantity %></th>
               <th><%= ingredient.measure %></th>
               <th><%= ingredient.title %></th>
-              <th><%= ingredient.quantity %> cal</th>
+              <th><%= ingredient.totalCalories %> cal</th>
               <th><%= ingredient.weight.toFixed(1) %> g</th>
             </tr>
             <%})%>
